tried to change version of jdk, and plugins to avoid conflict but couldn't make it work