@@ -1,9 +1,14 @@
 plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.kotlin.android)
-    id("com.google.dagger.hilt.android")
+//    id("com.google.dagger.hilt.android")
+    id("com.google.dagger.hilt.android") version libs.versions.hiltAndroidGradlePlugin.get()
     id("com.google.gms.google-services")
-    id("kotlin-kapt")
+//    id("kotlin-kapt")
+//    id("com.google.devtools.ksp")
+    id("com.google.devtools.ksp") version libs.versions.comGoogleDevtoolsKspGradlePlugin.get()
+//    id("com.google.devtools.ksp") version "1.9.10"
+//    id("com.google.devtools.ksp") version libs.versions.ksp.get()
 }
 
 android {
@@ -12,7 +17,7 @@ android {
 
     defaultConfig {
         applicationId = "com.example.parcial"
-        minSdk = 24
+        minSdk = 26
         targetSdk = 34
         versionCode = 1
         versionName = "1.0"
@@ -33,11 +38,21 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+//        sourceCompatibility = JavaVersion.VERSION_1_8
+//        targetCompatibility = JavaVersion.VERSION_1_8
+//        sourceCompatibility = JavaVersion.VERSION_17
+//        targetCompatibility = JavaVersion.VERSION_17
+//        sourceCompatibility = JavaVersion.VERSION_11
+//        targetCompatibility = JavaVersion.VERSION_11
+        sourceCompatibility = JavaVersion.VERSION_21  // Use JDK 21
+        targetCompatibility = JavaVersion.VERSION_21  // Use JDK 21
     }
     kotlinOptions {
-        jvmTarget = "1.8"
+//        jvmTarget = "1.8"
+        jvmTarget = "21"  // Set Kotlin to target JDK 21
+//        jvmTarget = "17"
+//        jvmTarget = "11"
+//        freeCompilerArgs += "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED"
     }
     buildFeatures {
         compose = true
@@ -49,6 +64,17 @@ android {
         resources {
             excludes += "/META-INF/{AL2.0,LGPL2.1}"
         }
+    }
+    kotlin {
+        jvmToolchain(17)
+    }
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+//        languageVersion = JavaLanguageVersion.of(17)
+//        languageVersion = JavaLanguageVersion.of(11)
     }
 }
 
@@ -81,9 +107,17 @@ dependencies {
 
     //HILT
     implementation(libs.hilt.android)
-    implementation(libs.hilt.compiler)
-    kapt(libs.hilt.compiler)
+//    implementation(libs.hilt.compiler)
+//    kapt(libs.hilt.compiler)
+//    ksp(libs.hilt.ksp)
     implementation(libs.hilt.navigation.compose)
+//    implementation(libs.hilt.lifecycle.viewmodel)
+//    kapt(libs.hilt.lifecycle.compiler)
+//    ksp(libs.hilt.lifecycle.compiler)
+
+    //KSP NOT WORKING...
+//    ksp(libs.hilt.compiler)
+//    ksp(libs.hilt.lifecycle.viewmodel)
 
     implementation(libs.androidx.ui)
     implementation(libs.androidx.ui.graphics)
@@ -93,6 +127,7 @@ dependencies {
     implementation(libs.androidx.lifecycle.runtime.compose)
     implementation(libs.androidx.animation.android)
     implementation(libs.androidx.runtime.livedata)
+    implementation(libs.com.google.devtools.ksp.gradle.plugin)
 //    implementation(libs.hilt.android.gradle.plugin)
     testImplementation(libs.junit)
     androidTestImplementation(libs.androidx.junit)
